--- a/package.json
+++ b/package.json
@@ -9,9 +9,8 @@
   },
   "dependencies": {
     "island-util": "git+https://island-ebs:i51andghebs@github.com/The-Island/island-util.git#develop",
-    "underscore": "^1.4.4",
-    "underscore.string": "~2.3.1",
+    "underscore": "^1.8.3",
+    "underscore.string": "^2.3.3",
     "step": "0.0.5"
   }
 }
-
